# robot_programming_icp

./: .gitignore  compile.sh  start.sh
exercise/: CMakeLists.txt  README.md  package.xml
exercise/include/: normal_localizer2d.h
exercise/include/nicp/: eigen_nicp_2d.h  normal_estimator.h
exercise/src/: normal_localizer2d.cpp
exercise/src/nicp/: eigen_nicp_2d.cpp  normal_estimator.cpp
report/: report.aux  report.dvi  report.fdb_latexmk  report.fls  report.out  report.tex  report.toc
